# paperclip

./: vitest.config.ts
cli/src/__tests__/: company-delete.test.ts  company.test.ts  worktree.test.ts
doc/spec/: missions.md
docs/: rename-proposal.md
docs/handovers/: endpoint-shield-2026-04-18.md
docs/roadmaps/: 2026-04-18-self-teaching-paperclip-roadmap.md
docs/runbooks/: dogfood-paperclip-on-paperclip.md
docs/superpowers/plans/: 2026-04-18-F1-operator-profile.md
docs/superpowers/specs/: 2026-04-18-adapter-defaults-and-review-design.md  2026-04-18-agent-intelligence-design.md  2026-04-18-self-teaching-paperclip-design.md
scripts/: dev-service.ts
server/src/: app.ts
server/src/__tests__/: agent-hire-authority-routes.test.ts  agent-hire-capabilities-routes.test.ts  agent-hire-role-icon-enum-routes.test.ts  agent-instructions-batch-import.test.ts  agent-permissions-routes.test.ts  agent-skills-routes.test.ts  bottleneck-routes.test.ts  ceo-overlay-refine.test.ts  ceo-overlay.test.ts  claude-local-execute.test.ts  codex-local-execute.test.ts  codex-local-skill-injection.test.ts  company-portability.test.ts  coverage-routes.test.ts  cursor-local-adapter-environment.test.ts  cursor-local-execute.test.ts  cursor-local-skill-injection.test.ts  cursor-local-skill-sync.test.ts  dev-watch-ignore.test.ts  feedback-service.test.ts  gemini-local-adapter-environment.test.ts  gemini-local-execute.test.ts  gemini-local-skill-sync.test.ts  (+27 more)
skills/paperclip/: SKILL.md
skills/paperclip-create-agent/: SKILL.md
tests/fixtures/archetype/python-poetry/: pyproject.toml
(+60 files in other folders)
